# ChangeLog for media-video/get_flash_videos
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/get_flash_videos/ChangeLog,v 1.12 2012/02/29 21:33:32 hwoarang Exp $

*get_flash_videos-1.24-r1 (29 Feb 2012)

  29 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
  +files/get_flash_videos-youtubefix.patch, +get_flash_videos-1.24-r1.ebuild:
  Apply youtube fix from upstream. Bug #405761. Thanks to Peter Fox
  <gentoo@roestock.demon.co.uk>

  29 Jul 2011; Zac Medico <zmedico@gentoo.org> get_flash_videos-1.24.ebuild:
  Add ~x86-linux keyword.

  18 Mar 2011; Thomas Kahle <tomka@gentoo.org> get_flash_videos-1.24.ebuild:
  x86 stable per bug 353088

  11 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  get_flash_videos-1.24.ebuild:
  Stable on amd64 wrt bug #353088

*get_flash_videos-1.24 (14 Dec 2010)

  14 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  +get_flash_videos-1.24.ebuild:
  Version bump. Fixes bug #348665

  15 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  get_flash_videos-1.23-r1.ebuild:
  Stable on amd64 wrt bug #343607

  10 Nov 2010; Thomas Kahle <tomka@gentoo.org>
  get_flash_videos-1.23-r1.ebuild:
  x86 stable per bug #343607

  27 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  get_flash_videos-1.23-r1.ebuild:
  Put the tarball on gentoo mirrors. Fix S variable to match the latest code

*get_flash_videos-1.23-r1 (20 Aug 2010)

  20 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  -get_flash_videos-1.21.ebuild, -get_flash_videos-1.23.ebuild,
  +get_flash_videos-1.23-r1.ebuild:
  Fix SRC_URI. Bug #333707

  03 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  get_flash_videos-1.23.ebuild:
  Remove utils.t test wrt bug #330409. Thanks to Olivier Huber
  <oli.huber@gmail.com> for reporting

*get_flash_videos-1.23 (29 Jul 2010)

  29 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  +get_flash_videos-1.23.ebuild:
  Version bump

*get_flash_videos-1.21 (11 Jul 2010)
