@@ -3,26 +3,27 @@ Hash: SHA512
 
 AUX get_flash_videos-youtubefix.patch 3543 RMD160 fd36fca35ff8990479985ad17c32418bd31e593c SHA1 b0e4a777ade9a338db7b43f0da3560f8cbd05e05 SHA256 ca3bc4dce61c4de438ae333de122f6e1eda0ae44059d68f27dd593290f4d0e5e
 DIST App-get_flash_videos-1.24.tar.gz 82383 RMD160 1367954ba00cbd2dac5da84266d1b1fb64426a18 SHA1 035c1d6fe2ade44d3c968789831719f2d7b35c5d SHA256 9d402facf8d6adfd55365662902ab58a5cb5f0f56861385bed944e22052f9133
+DIST get-flash-videos-focusonthefamily.patch 1808 RMD160 c374e38df730221fc899f6008207e4bce76eefe2 SHA1 4773c25cf5f53f5655da0c8098c2a1bcc095d9f9 SHA256 36f4d1b08a8bfb47cc0551ef3a83c4bd376fe609eb841c7a188a74b9420b376a
 DIST get_flash_videos-1.23.tar.gz 76819 RMD160 160906964f821b8e4ef86344eeaa174af8d6f430 SHA1 41753120bb37a06a7f87522581db626bd472af8f SHA256 0d0f1b7d63708ca7332e17d26bd10d92aaf94dac4cd3670a4e8afe9fdb2605b6
 EBUILD get_flash_videos-1.23-r1.ebuild 1370 RMD160 50ef9a49d5fb3f9b72790d806d60f8093128fcb1 SHA1 ad7fcd97941cdaf5d5d17123d62cdea9ecbf0f0a SHA256 413139d5a625b36b349e5266bae992a36d737b271e7ca0493f0406470f3d73c7
-EBUILD get_flash_videos-1.24-r1.ebuild 1376 RMD160 c244b6c0aa92ea7c4a22922bc483e79e9f97c10c SHA1 115221880d3e1fc216ceffa9b01b41d51af60e12 SHA256 08705c5d2154a6d28985a4eafce4b02271d9fa85ef38c9bbf4836b0782c56c61
+EBUILD get_flash_videos-1.24-r1.ebuild 1556 RMD160 5f655126483cd86a2e1ddef8efd65aa3fa14c059 SHA1 9c992da078d8b69002776d4f7a102842d677c41c SHA256 44f0c5f0f3125fc47a74d1846bfd2db9fe45c78f3fd765bfa9f47b3aeaa89d43
 EBUILD get_flash_videos-1.24.ebuild 1264 RMD160 676cd7261cdfdd17c99c88255ae6e6056c128d65 SHA1 01c7d89180b0962c78abbd2700f8689ffb8a522c SHA256 83c018c5238231a9c68cae2edf0afaee7405f5decc3003be33f49865df49071d
-MISC ChangeLog 2223 RMD160 ba807576053bcd84e1729730ec13a2b2a544ef15 SHA1 2ce57008e3dd18f750c2c49fb66849c546af5a8e SHA256 b6521d183822949d42aeae5771d33a9c02ce74556176f913581cbec6440829fb
+MISC ChangeLog 2380 RMD160 b1927f993bb05576dfea6cc2b8a7d416f90a18f2 SHA1 b8fb1559b80fec338fed695dc97dedc7a63027bf SHA256 2ea686176adbc8763b0c790506dfa7806cdea76734b5022469b693bc6f01ef49
 MISC metadata.xml 278 RMD160 85ae612f4b725d8857a7fe0808090691c0e58fbd SHA1 c97840692a46e7d54f22bfcfd0a564a8d08033dd SHA256 07a0afc4dfc12865b213ef6815169e0524357989b213ac40bc9436dea94c3160
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPTpmwAAoJEPqDWhW0r/LC0W4P/1zwL+6UW/OQ8h7RFnTH5Tt3
-MCZBOlduS/G2CRUEp835WxFydXDuzdtuUtQeZlBlnIKNiQMOT14u1S8YTp50PLy4
-ialXKsgl6D1YsifHsps8wCDKEJVJCrzrXCMPSpwxRKxYEjv4ResvPeRgVt3zdj0z
-BJ7GCuPsLZy6wjfLyNdXE1T3+qW2qz6fiTrmEb6fUBibJu4UR73ZgRJi5308ZtTv
-MFZEr9i14Qm8xGgmr2z5An/xC+eoy72kY0E3C5PDpcjMaS03BGHdjuzNLtLatHb1
-gVUnVSXAULZHIeDGMZJ5wfetpanws28hMz5M278cLfMZeA4prXdVLhycPpilzcBm
-ZFmC0VKlJbcQG+GGaVWgNzPAPXXJQNAdp5eAKBm7ZiltKhDjGnN7zev+vDtF75b5
-pemwJQkiIoLsaB7ef6gmOUCNl4FkphLad/sExqNsug5a/q3eRgTh0shslxtPjQcH
-BD9QIO4QECxdppy66BXDrmNm+Zok82m52rENZTW+pM4Kme8pCKzkc1eRdWvupQxX
-916MxcEfNZGF6OgrtvtTcw3nJMhGrysXmcZxS25tvDilmG59czbGVz+8HTXjt1Of
-zKzqhzILTHUAAkfjvoEXJqPtloCQ/V3StMUjAM/SaunwLwlpXTY4DS6CYVEzwMfh
-epxJtnK+iCM0/T3+2A1o
-=BnnG
+iQIcBAEBCgAGBQJPVtIaAAoJEHQ6UuhrqBBQhJAP/1GnljdxJHQBA8scrI5/T0Jt
+fQkSGAzwqhDATlPTg4nHyA5CJjbukGbwU3tFVq35Bq2LzvDIRt2D9ViqMouguzYX
+DKYBV7Rjo+r69sKVnEQiyS6InxHSG6mpJuUcfuY433RqqE6wgZz7+1nByeB9Uja8
+9juzkgOzuNklsTbRIr381TRc9THKERt0O5WY6jkIrTbo6H4jWmEHKXIKftXngv9i
+r3Tju4mupCtKBRU3NKDwSSXLak+wSdR0qjJVRNmJN7eMB6C9A9qhnjKzW073Ztl2
+NMBrirnlw1nsUlUQLZgBouPM6yEmaQ1GGLiFWSZDibkcRrmZH75Li5WX6RCwrak2
+wKxX9i0j/6l51fkacrh2iv2Ettjn4la+BHbIedk4BnpKqMOwbJrDFsk8SflnM+Xl
+AvvxPg/v8RmTgi6AtQSyfTD+Cqijz5UoINWyW8LgUWL7KaF+fkBPVI1hdB39oVRb
+wITXkZMCPOXMBJTpJsOHd49k6ny5jGrkDIs7ZUwSP1vt64a6/3Iu5NYpr6WaoMgu
+CP7eaC6u7XEq8dDxmvI763GceOIubYLG7IMsKX0WVMFQbInPa5y8G//bMKMXyYg5
+sgQYmGy9FqIz5gGRUGzaQyPVR0sVdzCdY59AmqwuAUM6SD3LGk+rVSVC9s0gBO3E
+xMmJ9Wke+N1vJCdeYD9c
+=n2oM
 -----END PGP SIGNATURE-----
