@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-video/get_flash_videos/ChangeLog,v 1.12 2012/02/29 21:33:32 hwoarang Exp $
 
+  07 Mar 2012; Nathan Phillip Brink <binki@gentoo.org>
+  get_flash_videos-1.24-r1.ebuild:
+  Add get-flash-videos-focusonthefmaily.patch for dubium's usage.
+
 *get_flash_videos-1.24-r1 (29 Feb 2012)
 
   29 Feb 2012; Markos Chandras <hwoarang@gentoo.org>
